@@ -1,0 +1,3 @@
+// $Id$
+
+This test validates whether a connector can't have a consumes
